# Furrowed

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  board.cpp  board.hpp  constants.hpp  engine.cpp  engine.hpp  evaluate.cpp  evaluate.hpp  main.cpp  move.cpp  move.hpp  search.cpp  search.hpp  table.cpp  table.hpp  time.hpp  uci.cpp  uci.hpp
